@@ -6,6 +6,7 @@ Changes since Eina 1.7.0:
 Additions:
     * Add DOCTYPE children parsing in eina_simple_xml
     * Add eina_barrier thread API
+    * Add eina_thread API.
 
 Improvements:
     * Speedup Eina Rbtree Iterator by recycling memory instead of massively calling malloc/free.
