@@ -367,3 +367,7 @@
 
 	* eina_stringshare_add_length return NULL when func args are wrong.
 
+2012-10-19  Cedric Bail
+
+	* Add eina_thread API.
+
